--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,3 +1,4 @@
+
 <table border="1"> 
     <tr>
         <td>name</td>
@@ -11,9 +12,10 @@
             <td>{{alu.id}}</td>
             <td>{{alu.age}}</td>
             <td>{{alu.course}}</td>
-    </tr>
-
-    
+            <td>
+                <button type="button" (click)="onSelect(alu)">Editar</button>
+            </td>
+        </tr>
 
 </table>
 
