--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -19,4 +19,19 @@
 
 </table>
 
+<div *ngIf="selectedstudent">
+    <h1>Name: {{selectedstudent.name | uppercase}}</h1>
+    <h3>id: {{selectedstudent.id}}</h3>
+    <h3>age: {{selectedstudent.age}}</h3>
+    <h3>course: {{selectedstudent.course}}</h3>
+     
+    
+    <div>
+    <label for="student-name"> student Name: </label>
+    <input id = "student-name" [(ngModel)]="selectedstudent.name" placeholder="name">
+    </div>
+    
+</div>
+
+
 
